<resources>
    <string name="app_name">CashRegister</string>
    <string name="manager">Manager</string>
    <string name="onebut">1</string>
    <string name="twobut">2</string>
    <string name="threebut">3</string>
    <string name="fourbut">4</string>
    <string name="fivebut">5</string>
    <string name="sixbut">6</string>
    <string name="sevenbut">7</string>
    <string name="eightbut">8</string>
    <string name="ninebut">9</string>
    <string name="zerobut">0</string>
    <string name="clearbut">C</string>
    <string name="buy">BUY</string>
    <string name="total_price">Total Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_type">Product Type</string>
    <string name="restock">RESTOCK</string>
    <string name="history">HISTORY</string>
    <string name="cash_register">Cash Register</string>
    <string name="detail">detail</string>
    <string name="title_activity_item_restock">ItemRestockActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_new_quantity">Enter New Quantity</string>
    <string name="name">Name</string>
    <string name="price">Price</string>

</resources>