<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PaleTurquoise"
    tools:context=".MainActivity">


    <!--  <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideline_top"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintGuide_begin="10dp" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="550dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="650dp" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/DarkTurquoise"
        app:layout_constraintBottom_toTopOf="@id/guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cash_register"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@id/guideline_2"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/guideline_1">

        <TextView
            android:id="@+id/product_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:hint="@string/product_type"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/manager_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/DarkTurquoise"
            android:text="@string/manager"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/total_price"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_3"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_2" />



    <!--Horizontal Linear layout for grid layout and buy button-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@id/guideline_4"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_3">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:columnCount="3">

            <Button
                android:id="@+id/one_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/onebut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/two_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/twobut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/three_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/threebut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/four_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/fourbut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/five_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/fivebut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/six_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/sixbut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/seven_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/sevenbut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eight_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/eightbut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nine_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/ninebut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/clearbut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/zero_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkTurquoise"
                android:text="@string/zerobut"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </GridLayout>

        <Button
            android:id="@+id/buy_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/DarkTurquoise"
            android:text="@string/buy"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_5"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_4"
        app:layout_constraintVertical_bias="0.232" />

    <ListView
        android:id="@+id/list_products"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_5" />

</androidx.constraintlayout.widget.ConstraintLayout>