<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PaleTurquoise"
    tools:context=".RestockActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="180dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/DarkTurquoise"
        app:layout_constraintBottom_toTopOf="@id/guideline_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Restock"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/new_quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_new_quantity"
        android:textColor="@color/black"
        android:inputType="number"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_first" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/DarkTurquoise"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_second"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/DarkTurquoise"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ok_button"
        app:layout_constraintTop_toBottomOf="@id/guideline_second" />

    <ListView
        android:id="@+id/new_product_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_third"
        app:layout_constraintVertical_bias="0.09" />

</androidx.constraintlayout.widget.ConstraintLayout>